Prevent diff line from overflowing container
Reviewed at https://reviews.apache.org/r/63186/

--- a/ui/src/main/sass/components/_diff.scss
+++ b/ui/src/main/sass/components/_diff.scss
@@ -20,6 +20,8 @@
   }
 
   .diff-view {
+    overflow: auto;
+
     span {
       display: block;
       padding: 2px 10px;
